# minishell

./: CMakeLists.txt  Makefile  a.out  environ.c  environ_p2.c  err_manage.c  file  filea  fileasd  filed  filke  find_command.c  ft_env.c  header.h  inline_func.c  inline_func_p2.c  main.c  minishell  parse_input.c  strsplit_ws.c  test  test.c  test.c~
libft/: Makefile  ft_strcmp.c  ft_strncmp.c  get_next_line.c
