cmake_minimum_required(VERSION 3.9)
project(minishell)

set(CMAKE_CXX_STANDARD 11)

add_executable(minishell
        libft/ft_printf/del_minus.c
        libft/ft_printf/ft_itoa_base.c
        libft/ft_printf/ft_printf.c
        libft/ft_printf/ft_printf.h
        libft/ft_printf/header.h
        libft/ft_printf/my_ret.c
        libft/ft_printf/parse_format.c
        libft/ft_printf/parse_percent.c
        libft/ft_printf/proc_base.c
        libft/ft_printf/proc_int.c
        libft/ft_printf/proc_ptr.c
        libft/ft_printf/process_int_precision.c
        libft/ft_printf/processing_char.c
        libft/ft_printf/processing_string.c
        libft/ft_printf/valid.c
        libft/ft_atoi.c
        libft/ft_bzero.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isprint.c
        libft/ft_itoa.c
        libft/ft_itoa_long.c
        libft/ft_lstadd.c
        libft/ft_lstadd_end.c
        libft/ft_lstdel.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstlen.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_memalloc.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memdel.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_putchar.c
        libft/ft_putchar_fd.c
        libft/ft_putendl.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr.c
        libft/ft_putstr_fd.c
        libft/ft_strcap.c
        libft/ft_strcat.c
        libft/ft_strchr.c
        libft/ft_strclr.c
        libft/ft_strcmp.c
        libft/ft_strcpy.c
        libft/ft_strdel.c
        libft/ft_strdup.c
        libft/ft_strequ.c
        libft/ft_striter.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strlcat.c
        libft/ft_strlen.c
        libft/ft_strmap.c
        libft/ft_strmapi.c
        libft/ft_strncat.c
        libft/ft_strncmp.c
        libft/ft_strncpy.c
        libft/ft_strnequ.c
        libft/ft_strnew.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strrev.c
        libft/ft_strsplit.c
        libft/ft_strstr.c
        libft/ft_strsub.c
        libft/ft_strtrim.c
        libft/ft_swap.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/get_next_line.c
        libft/get_next_line.h
        libft/libft.h
        environ.c
        environ_p2.c
        find_command.c
        header.h
        inline_func.c
        inline_func_p2.c
        main.c
        )
